--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+            <div class="profile-img" >
                 <img src="images/profile-img.png" class="pfp">
             </div>
-            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
+            <div class="about-details" >
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
@@ -88,7 +88,7 @@
                 <h6>Art</h6>
             </div>
             <div class="my-skills">
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                <div class="skill" >
                     <div class="icon-container">
                         <i class="fas fa-cubes"></i>
                     </div>
@@ -98,7 +98,7 @@
                         deserunt facilis et impedit officiis fugiat enim veniam obcaecati
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="600">
+                <div class="skill" >
                     <div class="icon-container">
                         <i class="fas fa-globe-europe"></i>
                     </div>
@@ -108,7 +108,7 @@
                         deserunt facilis et impedit officiis fugiat enim veniam obcaecati
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="900">
+                <div class="skill" >
                     <div class="icon-container">
                         <i class="fab fa-digital-ocean"></i>
                     </div>
@@ -131,10 +131,10 @@
                 <h6>Some of my work</h6>
             </div>
             <div class="projects-item">
-                <div class="projects-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="projects-img has-margin-right">
                     <img src="images/project1.png" alt="">
                 </div>
-                <div class="projects-description" data-aos="fade-left" data-aos-delay="600">
+                <div class="projects-description">
                     <h6>Project 1</h6>
                     <h1>ONLY PLACE</h1>
                     <p>
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="projects-item">
-                <div class="projects-description has-margin-right" data-aos="fade-right" data-aos-delay="600">
+                <div class="projects-description has-margin-right">
                     <h6>Project 2</h6>
                     <h1>LOST IN MIAMI</h1>
                     <p>
@@ -152,15 +152,15 @@
                     </p>
                     <a href="https://www.instagram.com/p/CVffO0KMmpv/?utm_source=ig_web_copy_link" class="cta">View Details</a>
                 </div>
-                <div class="projects-img" data-aos="fade-left" data-aos-delay="300">
+                <div class="projects-img" >
                     <img src="images/project2.png" alt="">
                 </div>
             </div>
             <div class="projects-item">
-                <div class="projects-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="projects-img has-margin-right">
                     <img src="images/project3.png" alt="">
                 </div>
-                <div class="projects-description" data-aos="fade-left" data-aos-delay="600">
+                <div class="projects-description">
                     <h6>Project 3</h6>
                     <h1>LONG JORNEY</h1>
                     <p>
@@ -184,7 +184,6 @@
     <!-- Scripts -->
 
     
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="main.js"></script>
 </body>
